update user avatar route
